--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "~6.1.0",
+    "antd": "^6.3.0",
+    "antd-style": "^4.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
